# enigmahack

./: .env  Dockerfile  README.md  docker-compose.yml  init.sql
HttpLibBackend/: CMakeLists.txt  Libraries.h  main.cpp  outputfile
backend/: CMakeLists.txt  Dockerfile  main.cpp
backend/include/json/: README.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/nginx/: nginx.conf
frontend/src/: App.css  App.tsx  const.ts  main.tsx  mocks.ts  types.ts
frontend/src/components/app/: App.css  App.tsx
frontend/src/components/download-table/: DownloadTable.css  DownloadTable.tsx
nlp/: .env  .env.example  .gitignore  Dockerfile  README.md  requirements.txt  test.py  test_model.py
nlp/app/: email_worker.py  main.py
nlp/app/api/: routes.py
nlp/app/core/: config.py  logger.py
nlp/app/models/: classifier_model.py  resp.py  response_generator.py  sentiment_model.py  summarizer_model.py
nlp/app/models/base/: classifier_keyword.py  knowledge_base.py  problem_keywords.py  products.py
nlp/app/schemas/: SupportTicket.py  classifier.py  email.py  sentiment.py  support_ticket.py
nlp/app/services/: database_writer.py  email_sender.py  parser.py
nlp/services/: email_client.py
tg_bot/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  config.py
